# yolov4_

./: README.md  get_dr_txt.py  kmeans_for_anchors.py  predict.py  pytorch2onnx.py  requirements.txt  test.py  train.py  video.py  voc2yolo4.py  voc_annotation.py  yolo.py
deploy/onnx_pc_deploy/: onnxruntime_deploy.py
deploy/pytorch_pc_deploy/: generate_test.ipynb  predict.ipynb  predict.py  yolo.py
deploy/tvm_pc_deploy/: ONNX2TVM.ipynb  Pytorch2TVM.ipynb  deploy_so_python.ipynb
deploy/tvm_pc_deploy/deploy_cpp_pc/: CMakeLists.txt  deploy_so.cpp  tvm_runtime_pack.cc
nets/: CSPdarknet.py  yolo4.py  yolo_training.py
